--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.2.4",
     "morgan": "~1.9.1"
