--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
