--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "nodemon": "^3.1.4"
   }
 }
